החלפת תמונות במרינה זוטו, ים טתיס, ארוחת כריסטמס, כוכב המשאלות וכו

--- a/index.html
+++ b/index.html
@@ -8348,7 +8348,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]] פוליטיקאי [[סוסים לדבק]]" title="$:/StoryList">
+<div list="[[ים טתיס]] געזונטהייטס [[מרינה זוטו]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8368,7 +8368,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170425175328598" title="$:/temp/search">
+<div created="20161023184814872" modified="20170426212619386" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8691,12 +8691,12 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161115182456203" modified="20170424211434444" title="אלה">
+<div created="20161115182456203" modified="20170426204133097" title="אלה">
 <pre>[img[pictures/ela.jpg]]
 
 !!![[יויו]]:
 
-אני זה שהפך את אווה, לזו שכותבת את מה שאני מספר לה, ולכן אעתיק לכאן את מה שאווה כתבה על פי מה שסיפרתי לה, כשהגיע אלי לפריז ב 22 בדצמבר 2015:
+אני זה שהפך את אווה, לזו שכותבת את מה שאני מספר לה, ולכן אעתיק לכאן את מה שאווה כתבה על פי מה שסיפרתי לה, כשהגיע אלי לפריז ב 22 בדצמבר 2015 [[בכוכב המשאלות בעל תשע הצלעות|כוכב המשאלות בעל תשע הצלעות]]
 
 בתקופה של יפו עבדתי באולפני עריכה בצד המזרחי של תל אביב, היה לי קטנוע וחייתי טוב ולא קרה בה שום דבר ראוי לאזכור עד שהגיעה פרשת גורה והנה אנחנו יושבים כאן. אבל אני רוצה לספר רגע סיפור אחר שיביא אותנו בסופו של דבר לימי יפו. זה היה לפני 13 שנים. גם אז הייתי טכנאי סאונד. הרווחתי אחלה. הספיק כזה לבילויים והכול. הייתי גם שם בצד. עבדתי והיה לי טוב יחסית. מאז שהשתחררתי מהצבא זה מה שעשיתי וכל פעם הייתה לי חברה אחרת לאיזו תקופה. מהחברה האחרונה שהייתה לי עד לאז נפרדתי שנה לפני אותו יום ולאחר שחייתי אתה חמש שנים כמעט ובאמת חשבתי שהייתי אז בשיא שלי. ואז יום אחד [[תומר]] חבר שלי ואני הלכנו לבית קפה בדיזנגוף. אני הייתי אמור להתחיל לעבוד בארבע והיה שתיים בצהריים. הלכנו להתעורר לאטנו, ממש כמו שאני ואת עכשיו כאן בפריז. ככה בעודנו מתעוררים, ואני שעון לגמרי, עיניי עצומות ואני שומע קול עמוק של אישה צעירה. עוד לא קלטתי שהיא אומרת שלום לתומר, ואני פוקח את העיניים, מולי עומדת יפהפייה גבוהה כהה, עיניים שחורות כהות ממש, שיער שחור חלק, היא מביטה בי ומיד אני חושק בה. היא לא התפתלה, היא מיד שלחה אלי יד והציגה את עצמה. אלה. אמרה בקול עמוק. אני תפסתי את החרמנות של החיים, זה במבט אחורנית אני אומר לך, באותו הרגע סתם לא יכולתי לנתק ממנה את המבט, ואז היא ותומר אמרו כמה מילות נימוסים והיא חזרה לשבת עם אחיה. מיד שאלתי את תומר אם הוא מרשה לי להתחיל אתה. תשמע, הוא אמר לי, זאתי נראית לי מסוכנת, אבל סקסית, אין מה להגיד, תהנה אחי, אני לא ממש מכיר אותה, יצא לי לראות אותה כמה פעמים אצל דני. אז כתבתי לה פתק קטן וביקשתי מתומר שייתן לה אותו. משהו כמו שבועיים אחר כך נפגשנו. היא כמובן נהנתה למהמה את הפגישה כי הייתה.. את יודעת... אישה כזו. גורה ואני קוראים לנשים שכמותה ב[[סדרה שכתבנו האחיות K|HH]]. היא לא עונה לכל הקריטריונים של אחות K קלאסית, נניח, היא אינה לובשת בגדים סינטטיים, היא יותר בעניין של כותנה. היא מה&quot;יודעות&quot;... יודעת למה אני מתכוון? הייתה לה את כל ההתנהגות הזו של נשים שאז נמשכתי אליהן כמו זבוב לחרא. סתם. סליחה. תמיד המשפט הזה יוצא לי. גם היום יש לי דיאלוג לא גמור עם הנשים שאני נמשך אליהן וזה בכלל לא עניין אותי באותו רגע. חשבתי... את יודעת... שאני מעל הדברים. זה נורא מצחיק אותי כי עבדתי עם איזו חמורה אחת שכל הזמן הייתה אומרת לי, אתה צריך להיותon top of things   והיא הכי לא הייתה ככה, החיים שלה היו בלגן איום ונורא, היא והבעל שלה היו צורחים אחד על השני כל היום כי הוא היה לפני פשיטת רגל וזה איים לה על החסכונות, והיא פתאום קלטה שעשתה דיל חרא בזה שנישאה לו. לידי היא כמובן לא העזה לומר זאת מפורשות, אך לפעמים רמזה. אז כשעבדתי אתה זו בדיוק הייתה התקופה שחשבתי גם אני שכלום לא יכול לקרות. את יודעת... מה כבר יכול לקרות... וכאמור נפגשנו. אלה ואני. הייתה בינינו התאמה פיזית מסעירה. מהרגע שהתחלנו לעשות סקס לא יכולנו להפסיק. ככה חודשים. פשוט הייתי הולך לעבודה, עובד את הזמן שצריך וזהו. והיא לא עבדה כבר אז. למדה. אבל גם.. זה היה ככה פעם וחצי לימודים בשבוע. היה לה מלא זמן פנוי. הייתי מגיע לעבודה סחוט אבל שמח מאושר. התאהבנו וחשקנו בטירוף אחד בשנייה וככה חודשים אנחנו מזדיינים כמו ארנבונים ארוכי אוזניים, לא ממהרים לשום מקום. לא ראיתי אנשים בזמן הזה. אורי מהעבודה אמר לי יום אחד, אחי, תעצור לפעמים לראות לאן הגעת. אך לא השכלתי להקשיב לו. זה מה שנקרא לא לרנדר, למרות שכמו שאת רואה אני זוכר את המשפט הזה שהוא אמר לי, עכשיו אני מבין כמה הרינדור שלי איטי. היא הייתה מתקשרת אלי לעבודה כמה פעמים רבות כל יום. בהתחלה זה היה מגניב. הייתי כולי בתשוקה ורק רציתי לאכול עוד מהגוף שלה. היא הייתה כל הזמן לוחשת לי לבוא בין שמיכותיה, ועם הזמן התחלתי להתנתק מכל מעשה. הורדתי משמרות בעבודה, שמיכותיה היו על מיטתי, היא עזבה את הדירה בה התגוררה (למה לשלם פעמיים שכר דירה.. זמזמה לי.. אם אפשר להיות מינימליסטים ורק להיות מחוברים כל היום.. ) וכל זה בתוך כדי שהיא מראה לי ומוכיחה לי כמה לא יעיל זה לצאת לעבודה, מונה בפני את כל העלויות הכרוכות ביציאה מן הבית כולל האניות שמשיטות את הבגדים שאני לובש לעבודה אותם תופרים במזרח הרחוק. היא הפסיקה ללכת ללימודים. אחרי משהו כמו חצי שנה שמתי לב שהיא שמנה. בעשרה קילו הראשונים זה היה סקסי לאללה. היה משהו נורא מושך בהתעבות הזו. אבל אז היא עלתה תוך עוד כמה חודשים עוד עשרה קילו, מיד נהינו טוטליים. עאלק טוטליים. את יודעת? יש מילים שהייתי מכניס אותן תחת ההגדרה הוצאו מהקשרן. מילים שאנשים אומרים אותן ומבינים אותן בדיוק הפוך ממה שהן באמת, כמו למשל טוטלי. אני אוהב טוטלי, או נותן את הנשמה שלי. לא רוצה את הטוטאליות שלך, אל תאהבי אותי, תשאירי את הנשמה שלך אצלך ותדאגי שתהיה שם ותאהבי אותה ואת שלי תשאירי אצלי!!!  יחד עם זאת.
 הוא חייך מהבדיחה של עצמו, החיוך הוסר, הוא הלך והרצין, פניו הלכו והרצינו. 
@@ -8800,8 +8800,8 @@ Error message and password prompt
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20161112191527440" modified="20170423220139575" title="ארוחת כריסמס">
-<pre>[img[pictures/zVz8rufF4aR5GlBM.jpg]]
+<div created="20161112191527440" modified="20170426211918144" title="ארוחת כריסמס">
+<pre>[img[pictures/aruchat-christmas.jpg]]
 
 
 !!![[אווה]]:
@@ -9042,7 +9042,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20170424211503342" tags="[[אחיות חוץ]]" title="דיוויד בואי">
+<div created="20170105154405192" modified="20170426194804847" tags="[[אחיות חוץ]]" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -9056,7 +9056,7 @@ Error message and password prompt
 
 דיוויד בואי הוא אולי האדם הכי חייזרי במובן הטוב ביותר של המילה, ששהה על הכדור הזה בתקופה הזו, והוא היה הכי שאפשר מכל בחינה שהיא, כולל המגדר הלא מוגדר. הרעיון שכדור הארץ הוא בעצם [[גלות]] תפס אותי. לא פעם חשבתי שיכול להיות שהנשמה יכולה להתגלגל בין כוכבים במרחב האינסופי. כשהייתי ילדה נהגתי לספור את נקודות החן שעל גופי, וחשבתי שבטח החיבור ביניהן הוא צורתו של הכוכב ממנו הגעתי. עד כיתה ב' היו לי 27 נקודות חן, ובערך אז הפסקתי לספור. 
 
-מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היי רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות פרדריק מתיאס אלכסנדר, בואי נשמע לי הרבה יותר כייף. 
+מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היי רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות [[פרדריק מתיאס אלכסנדר|שיטת אלכסנדר]], בואי נשמע לי הרבה יותר כייף. 
 
 
 
@@ -9817,14 +9817,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20170103180131090" title="הרקוויאם של פורה">
-<pre>[img[pictures/dh2tDmtDTyckaIfU.JPG]]
+<div created="20161221191920525" modified="20170426203913017" title="הרקוויאם של פורה">
+<pre>[img[pictures/requiem-faure.jpg]]
 
 אני יושבת כעת על המדרגות שלמרגלות המונמרטרה. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
 
 אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]] הזה גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
-גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, גולה תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן המה בראשי ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
+גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
 <div created="20161112221314170" modified="20170422214805109" tags="[[אחות כהן]]" title="ז'נבייב">
 <pre>[img[pictures/genevieve.jpg]]
@@ -9954,8 +9954,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
  
 </pre>
 </div>
-<div created="20161030110441328" modified="20161213205302809" title="ים טתיס">
-<pre>[img[pictures/ccDpGp3IHg5hAMCR.JPG]]
+<div created="20161030110441328" modified="20170426213519481" title="ים טתיס">
+<pre>[img[pictures/tethys-sea.jpg]]
 מאגר גז שכל התפוקה העתידית שלו נמכרה לגורם שמעדיף להישאר בעילום שם תמורת הזכות לפתח את [[מרינה זוטו]] ו[[געזונטהייטס]] בתור נכסי [[דיור מוגז]].</pre>
 </div>
 <div created="20170422205250692" modified="20170423215157887" tags="[[המטבח על פי ז'נבייב]]" title="ירקות קלויים">
@@ -9981,14 +9981,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161113182253178" modified="20170125165615268" title="כוכב המשאלות בעל תשע הצלעות">
-<pre>[img[https://i.imgur.com/AMt3Qfp.jpg]]
+<div created="20161113182253178" modified="20170426205526288" title="כוכב המשאלות בעל תשע הצלעות">
+<pre>[img[pictures/cochav-hamishalot.jpg]]
 
 !!![[אווה]]:
 
 &quot;כוכב המשאלות בעל תשע הצלעות&quot;, הוא סיפור [[שכתבתי|אווה כהן]] בחורף 2016, ובו אני מספרת על הימים בהם התארחתי אצל יויו, גורה ודןדן בפריז, ששיאם היה ארוחת הכריסמס.
 
-הגעתי אליהם - אל יויו למעשה - יומיים לפני הארוחה. בסיפור אני כותבת חלקים מסיפור חיי כפי שסיפרתי ליויו בעיקר' אבל גם לשאר החברים' ועל מה שקרה [[בארוחה|ארוחת כריסמס]].
+הגעתי אליהם - אל יויו למעשה - יומיים לפני הארוחה. בסיפור אני כותבת חלקים מסיפור חיי כפי שסיפרתי ליויו בעיקר, אבל גם לשאר החברים, ועל מה שקרה [[בארוחה|ארוחת כריסמס]].
 
 בקרוב יועתק לכאן.</pre>
 </div>
@@ -10210,8 +10210,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20170425201738858" modified="20170425203515224" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
-<pre>
-[img[pictures/mechalkim-nayadim.jpg]]
+<pre>[img[pictures/mechalkim-nayadim.jpg]]
 
 !![[בחוות החיות, בכייף שלהם החזירים מחלקים סלולרים.]]</pre>
 </div>
@@ -10787,8 +10786,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170320163938974" modified="20170320171043471" title="מערכת העיתון">
-<pre>[img[pictures/dYCf8rottleI7huC.jpg]]
+<div created="20170320163938974" modified="20170426200533955" title="מערכת העיתון">
+<pre>[img[pictures/maarechet-haiton.jpg]]
 
 !!![[גורה]]:
 
@@ -10819,10 +10818,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אימא של [[אלפרד]], שנסעה לבלי שוב.</pre>
 </div>
-<div created="20161024181726961" modified="20170115211753463" title="מרינה זוטו">
+<div created="20161024181726961" modified="20170426214128524" title="מרינה זוטו">
 <pre>פרוייקט [[דיור מוגז]] ב[[ים טתיס]]
 
-[img[pictures/UODl0NUHJe49zN3L.jpg]]</pre>
+[img[pictures/marina-zuto.jpg]]</pre>
 </div>
 <div created="20170331201741562" modified="20170417190759219" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
@@ -10891,12 +10890,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לארוחת הכריסמס היא הכינה [[צלי בשר עם תפוחי אדמה]], [[פנה-טונה]], ו-[[ריגו יאנצ'י]].</pre>
 </div>
-<div created="20170425213116567" modified="20170425213952365" tags="[[בחוות החיות]]" title="סוסים לדבק">
-<pre>
+<div created="20170425213116567" modified="20170426194122113" tags="[[בחוות החיות]]" title="סוסים לדבק">
+<pre>[img[pictures/soosim-ledevek.jpg]]
 
-[img[pictures/soosim-ledevek.jpg]]
-
-!!![[כשהסוסים מתעייפים, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.]]
+!!![[כשהסוסים הופכים חסרי תועלת, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.]]
 
 </pre>
 </div>
@@ -12091,20 +12088,18 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20161206222443036" modified="20170125171116253" title="שיטת אלכסנדר">
-<pre>[img[pictures/77fiEW7lUsmZ9jiD.jpg]]
+<div created="20161206222443036" modified="20170426202712223" title="שיטת אלכסנדר">
+<pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
 
-בנערותי סבלתי מכאבי גב חזקים שהתבררו כעקמת שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו לי 12 סנטימטרים וגובהי הסופי הגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה בשיטת אלכסנדר. די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את כל הדברים האחרים. בסוף השרות הצבאי הכאבים חזרו והחלטתי לנסות שוב את השיטה ומאז אני הולכת כל שבוע לשיעור ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה. (סרטון אלכסנדר באתר של יויו).
+בנערותי סבלתי מכאבי גב חזקים שהתבררו כעקמת שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו לי 12 סנטימטרים וגובהי הסופי הגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]]. די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את כל הדברים האחרים. בסוף השרות הצבאי הכאבים חזרו והחלטתי לנסות שוב את השיטה ומאז אני הולכת כל שבוע לשיעור ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה. (סרטון אלכסנדר באתר של יויו).
 
 להניח לצוואר להיות חופשי
 
 כדי לתת לראש ללכת קדימה ולמעלה.
 
 כדי לתת לגב להיות ארוך ורחב.
-
-[[שיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]]
 
 </pre>
 </div>
