--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@ Error message and password prompt
 
 <li>דיוויד בואי</li>
 
+<li>דיור מוגז</li>
+
 <li>דינה ז&quot;ל</li>
 
 <li>דןדן</li>
@@ -406,6 +408,8 @@ Error message and password prompt
 <li>מערכת העיתון</li>
 
 <li>מפעיל יד</li>
+
+<li>מצפה ראשית</li>
 
 <li>מקלדת</li>
 
@@ -8348,7 +8352,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ים טתיס]] געזונטהייטס [[מרינה זוטו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מצפה ראשית]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8368,7 +8372,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170426212619386" title="$:/temp/search">
+<div created="20161023184814872" modified="20170501164401771" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9062,6 +9066,13 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20170428171750882" modified="20170501182040883" title="דיור מוגז">
+<pre>[img[pictures/diyur-mugaz.jpg]]
+
+!!![[גורה]]:
+
+דיור מוגז [[במצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים תטיס]].</pre>
+</div>
 <div created="20170415105944150" modified="20170419210828038" title="דינה ז&quot;ל">
 <pre>[img[pictures/ima-shel-gura.jpg]]
 
@@ -9165,7 +9176,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161111215423587" modified="20170423223435735" title="האחיות כהן">
+<div created="20161111215423587" modified="20170501160136636" title="האחיות כהן">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 
@@ -10712,13 +10723,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20170330001122169" title="מיזונפלציה">
+<div created="20170112174310883" modified="20170429121159503" tags="[[המטבח על פי ז'נבייב]]" title="מיזונפלציה">
 <pre>[img[pictures/5w7PxVmJQ0wK3AoL.jpg]]
 
 
 !!![[יויו]]:
 
-[[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה ונקיון.
+על פי ז'נבייב, [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה [[ונקיון|מנקים היטב]].
 
 
 בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם מאימא או מסבתא, מכינים את החומרים, מכינים את מה שמכינים ו[[מנקים היטב]].
@@ -10797,14 +10808,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
 </div>
-<div created="20170422190532804" modified="20170422212125863" tags="[[חלומות שחלמנו]]" title="מפעיל יד">
+<div created="20170422190532804" modified="20170429202701490" tags="[[חלומות שחלמנו]]" title="מפעיל יד">
 <pre>[img[pictures/mafil-yad.jpg]]
 
 !!![[יויו]]:
 
 מאז שהפכתי [[למפקח נקיון בקוסקוס|מנקים היטב]], אני חולם על מתקן קטן וממונע, שיושב על שורש כף היד כמו שעון, וכשמפעילים אותו היד נעה, ויש ארבע אפשרויות:
 
-במעגלים חלש, במעגלים חזק, קדימה ואחורה חלש וקדימה ואחורה חזק.</pre>
+במעגלים חלש, במעגלים חזק, קדימה ואחורה חלש וקדימה ואחורה חזק.
+
+באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
+</div>
+<div created="20170501184958435" modified="20170501185025260" title="מצפה ראשית">
+<pre>[img[pictures/mizpe-reshit.jpg]]</pre>
 </div>
 <div created="20170223175057546" modified="20170417151442577" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
@@ -10818,10 +10834,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אימא של [[אלפרד]], שנסעה לבלי שוב.</pre>
 </div>
-<div created="20161024181726961" modified="20170426214128524" title="מרינה זוטו">
+<div created="20161024181726961" modified="20170501180410727" title="מרינה זוטו">
 <pre>פרוייקט [[דיור מוגז]] ב[[ים טתיס]]
 
-[img[pictures/marina-zuto.jpg]]</pre>
+[img[pictures/marina-zuto.jpg]]
+
+!!![[גורה]]:
+
+מרינה זוטו היא חלק נוסף בתצרף המוקפד של הדיור המוגז של [[מצפה ראשית]] שליד אסדת טתיס.
+
+המודל לקוח [[מספרינגפילד|https://he.wikipedia.org/wiki/%D7%A1%D7%A4%D7%A8%D7%99%D7%A0%D7%92%D7%A4%D7%99%D7%9C%D7%93_(%D7%9E%D7%A9%D7%A4%D7%97%D7%AA_%D7%A1%D7%99%D7%9E%D7%A4%D7%A1%D7%95%D7%9F)]], ולמעט כרסום חלקים משלושה יערות, וכתישת שוניות אלמוגים לא נעשה כל נזק לסביבה.</pre>
 </div>
 <div created="20170331201741562" modified="20170417190759219" tags="[[אחות כהן]]" title="מרק">
 <pre>[img[pictures/mark1.jpg]]
@@ -11400,13 +11422,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161118213157653" modified="20170404203852975" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי פקאן עם קרמל">
-<pre>[img[pictures/MLWABb3xeHOEf9eG.JPG]]
+<div created="20161118213157653" modified="20170429203010372" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי פקאן עם קרמל">
+<pre>[img[pictures/pekan-pie.jpg]]
 
+!!![[אווה]]:
 
 חומרי גלם לקרמל
 
- *מאה גרם חמאה
+*מאה גרם חמאה
 *כוס וחצי סוכר
 *כוס וחצי  שמנת מתוקה
 
