קוסמטיקה בחוות החיות

--- a/index.html
+++ b/index.html
@@ -8363,7 +8363,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בית האננס ההוואי של אירי]] [[ליל הדובונאז']] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בחוות החיות]] [[סוסים לדבק]] [[מחלקים סלולרים]] [[כורתים עצים]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8383,8 +8383,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170501194458843" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170501200219423" title="$:/temp/search">
+<pre>בחוו</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8953,13 +8953,13 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20170425194155286" modified="20170425212841236" title="בחוות החיות">
+<div created="20170425194155286" modified="20170501200827163" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
 !!![[גורה]]:
 
-!![[מאד מאד כייף]]
+!!''[[מאד מאד כייף|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%95%D7%AA_%D7%94%D7%97%D7%99%D7%95%D7%AA]]''
 
 
 
@@ -10102,12 +10102,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקרוב יועתק לכאן.</pre>
 </div>
-<div created="20170425180523126" modified="20170425194058179" tags="[[בחוות החיות]]" title="כורתים עצים">
+<div created="20170425180523126" modified="20170501201357935" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
 !!![[גורה]]:
 
-[[בחוות החיות|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%95%D7%AA_%D7%94%D7%97%D7%99%D7%95%D7%AA]], החזירים והכלבים כורתים עצים, כדי לבנות לגובה.
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החזירים והכלבים כורתים עצים, כדי לבנות לגובה.''
 
 </pre>
 </div>
@@ -10319,10 +10319,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20170425201738858" modified="20170425203515224" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
+<div created="20170425201738858" modified="20170501201434028" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
 
-!![[בחוות החיות, בכייף שלהם החזירים מחלקים סלולרים.]]</pre>
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, בכייף שלהם החזירים מחלקים סלולרים.''</pre>
 </div>
 <div created="20170406164152446" modified="20170418160335679" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
@@ -11011,10 +11011,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לארוחת הכריסמס היא הכינה [[צלי בשר עם תפוחי אדמה]], [[פנה-טונה]], ו-[[ריגו יאנצ'י]].</pre>
 </div>
-<div created="20170425213116567" modified="20170426194122113" tags="[[בחוות החיות]]" title="סוסים לדבק">
+<div created="20170425213116567" modified="20170501201331135" tags="[[בחוות החיות]]" title="סוסים לדבק">
 <pre>[img[pictures/soosim-ledevek.jpg]]
 
-!!![[כשהסוסים הופכים חסרי תועלת, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.]]
+!!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, כשהסוסים הופכים חסרי תועלת, החזירים והכלבים שולחים אותם  לבית החרושת לדבק.''
 
 </pre>
 </div>
